<resources>
    <string name="app_name">UDA General Knowledge</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="question_one">1. Berlin is the capital of which country?</string>
    <string name="que_one_ans_one">Belgium</string>
    <string name="que_one_ans_two">Netherlands</string>
    <string name="que_one_ans_three">Germany</string>
    <string name="question_two">2. Does the moon have gravity?</string>
    <string name="que_two_ans_one">Yes</string>
    <string name="que_two_ans_two">No</string>
    <string name="que_two_ans_three">Don\'t Know</string>
    <string name="question_three">3. You want to make green paint. Which colors do you mix together?</string>
    <string name="que_three_ans_one">Red and Yellow</string>
    <string name="que_three_ans_two">Blue and Yellow</string>
    <string name="que_three_ans_three">Orange and Purple</string>
    <string name="question_four">4. Which is the longest river in the world?</string>
    <string name="que_four_ans_one">Amazon</string>
    <string name="que_four_ans_two">Nile</string>
    <string name="que_four_ans_three">Mississippi</string>
    <string name="question_five">5. What language do most people in Austria speak?</string>
    <string name="que_five_ans_one">German</string>
    <string name="que_five_ans_two">Austrian</string>
    <string name="que_five_ans_three">Hungarian</string>
    <string name="question_six">6. Which country is closer to the North Pole?</string>
    <string name="que_six_ans_one">Finland</string>
    <string name="que_six_ans_two">China</string>
    <string name="que_six_ans_three">North Korea</string>
    <string name="question_seven">7. On the “polar” opposite end of the world, which animal lives in Antarctica?</string>
    <string name="que_seven_ans_one">Polar bear</string>
    <string name="que_seven_ans_two">Penguins</string>
    <string name="que_seven_ans_three">Narwhals</string>
    <string name="question_eight">8. Congratulations, you won a brand new car! Based on this logo, what make is it?</string>
    <string name="que_eight_ans_one">Toyota</string>
    <string name="que_eight_ans_two">Chrysler</string>
    <string name="que_eight_ans_three">Mitsubishi</string>
    <string name="question_nine">9. Who was president of the United States in 2005?</string>
    <string name="que_nine_ans_one">Bill Clinton</string>
    <string name="que_nine_ans_two">Barack Obama</string>
    <string name="que_nine_ans_three">George W. Bush</string>
    <string name="question_ten">10. It takes a bright person to innovate! Who is credited with inventing the lightbulb?</string>
    <string name="que_ten_ans_one">Alexander Graham Bell</string>
    <string name="que_ten_ans_two">Benjamin Franklin</string>
    <string name="que_ten_ans_three">Thomas Edison</string>
    <string name="question_eleven">11. What year was Titanic released in the US?</string>
    <string name="que_eleven_ans_one">1996</string>
    <string name="que_eleven_ans_two">1997</string>
    <string name="que_eleven_ans_three">1998</string>
    <string name="question_twelve">12. Who is the founder of Instagram?</string>
    <string name="que_twelve_ans_one">Jack Dorsey</string>
    <string name="que_twelve_ans_two">Kevin Systrom</string>
    <string name="que_twelve_ans_three">Jan Koum</string>
    <string name="question_thirteen">13. In what year was WhatsApp founded?</string>
    <string name="que_thirteen_ans_one">2004</string>
    <string name="que_thirteen_ans_two">2007</string>
    <string name="que_thirteen_ans_three">2009</string>
    <string name="question_fourteen">14. What is the fear of heights called?</string>
    <string name="que_fourteen_ans_one">Aerophobia</string>
    <string name="que_fourteen_ans_two">Astraphobia</string>
    <string name="que_fourteen_ans_three">Acrophobia</string>
    <string name="question_fifteen">15. What\'s the answer to (3/5) of 65?</string>
    <string name="que_fifteen_ans_one">30</string>
    <string name="que_fifteen_ans_two">35</string>
    <string name="que_fifteen_ans_three">39</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="email">Email</string>
</resources>
